--- a/src/T01_erpnext/T01.md
+++ b/src/T01_erpnext/T01.md
@@ -24,6 +24,22 @@ h1 {
 
 ---
 
+# Administration
+
+- Instructor: Nirand Pisutha-Arnond
+  - Faculty of Industrial Engineering Department
+- Contact: Mango Canva, MS Team
+
+![bg contain right:30%](img/paste-1756516142826.png)
+
+---
+
+# Schedule
+
+![alt text](img/paste-1765422024834.png)
+
+---
+
 # ERPNext
 
 ---
