--- a/src/T06_project/T06.md
+++ b/src/T06_project/T06.md
@@ -26,12 +26,11 @@ h1 {
 
 # ERPNext Business Simulation
 
-> Due Date: **15 January 2026**
-
 ---
 
 # Project Overview
 
+- Individual project
 - Implement a small business inside ERPNext.
 - Configure master data.
 - Run key operations including purchasing, selling, inventory, HR, manufacturing (if relevant).
@@ -68,10 +67,21 @@ Can be real or fictional.
 
 ---
 
-# Deliverables and presentation
+# Presentation
+
+- In-class presentation (15–20 minutes)
+  - Date: **15 January 2026**
+  - Duration: 15–20 minutes
+  - Present from central laptop
+  - The screen and voice will be recorded for internal review.
+
+---
+
+# Deliverables
 
 - A live ERPNext instance
-- In-class presentation (15–20 minutes)
+- A presentation slide (PDF)
+- Submit through MS Team chat before the presentation date.
 
 ---
 
