--- a/src/T06_project/T06.md
+++ b/src/T06_project/T06.md
@@ -94,3 +94,9 @@ Can be real or fictional.
 | Correctness and Completeness of Simulated Processes | 30%    |
 | Depth of Accounting Analysis                        | 20%    |
 | Presentation Clarity and Teamwork                   | 10%    |
+
+---
+
+# Reset ERPNext Instance
+
+- Contact me through MS Teams if you need to reset your ERPNext instance.
