--- a/src/T06_project/T06.md
+++ b/src/T06_project/T06.md
@@ -30,7 +30,7 @@ h1 {
 
 # Project Overview
 
-- Individual project
+- Individual project or team project.
 - Implement a small business inside ERPNext.
 - Configure master data.
 - Run key operations including purchasing, selling, inventory, HR, manufacturing (if relevant).
@@ -93,7 +93,7 @@ Can be real or fictional.
 | Master Data Quality                                 | 20%    |
 | Correctness and Completeness of Simulated Processes | 30%    |
 | Depth of Accounting Analysis                        | 20%    |
-| Presentation Clarity and Teamwork                   | 10%    |
+| Presentation Clarity                                | 10%    |
 
 ---
 
